SERVER-34768 Sync source's optime cannot be behind the syncing node even if chaining is disabled.

(cherry picked from commit 319757ebb72611fb91044a2a81d1b77a6f3729c1)

SERVER-46050 Use getLastAppliedOpTime rather than getHeartbeatAppliedOpTime for checking primary's position.