src/mongo/db/repl/topology_coordinator.cpp
@@ -287,6 +287,15 @@ HostAndPort TopologyCoordinator::chooseNewSyncSource(Date_t now,
                 << "Cannot select a sync source because chaining is not allowed and we are primary";
             _syncSource = HostAndPort();
             return _syncSource;
+        } else if (_memberData.at(_currentPrimaryIndex).getLastAppliedOpTime() <
+                   lastOpTimeFetched) {
+            LOG(1) << "Cannot select a sync source because chaining is not allowed and the primary "
+                      "is behind me. Last oplog optime of primary "
+                   << _currentPrimaryMember()->getHostAndPort() << ": "
+                   << _memberData.at(_currentPrimaryIndex).getLastAppliedOpTime().toBSON()
+                   << ", my last fetched oplog optime: " << lastOpTimeFetched.toBSON();
+            _syncSource = HostAndPort();
+            return _syncSource;
         } else {
             _syncSource = _currentPrimaryMember()->getHostAndPort();
             log() << "chaining not allowed, choosing primary as sync source candidate: "
